apps/duplicati/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: duplicati
  labels:
    app: duplicati
spec:
  ports:
    - name: http
      port: 8200
      targetPort: 8200
  selector:
    app: duplicati
